// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`L&A (logic and accuracy) flow 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="sc-bdfBwQ eVNwUy"
  >
    <div
      class="sc-hKgILt ciSCwP"
    >
      <div
        class="sc-eCssSg evawvT"
      >
        <div
          class="sc-jSgupP ioUXLm"
        >
          Voting
          <span>
            Works
          </span>
        </div>
        <div
          class="sc-gKsewC"
        >
          VxAdmin
        </div>
      </div>
      <div
        class="sc-iBPRYJ fVzTCx"
      >
        <button
          class="sc-jrAGrp hAHAue"
          role="option"
          type="button"
        >
          Definition
        </button>
        <button
          class="sc-jrAGrp hAHAue"
          role="option"
          type="button"
        >
          Cards
        </button>
        <button
          class="sc-jrAGrp hAHAue"
          role="option"
          type="button"
        >
          Ballots
        </button>
        <button
          class="sc-jrAGrp hAHAue active-section"
          role="option"
          type="button"
        >
          L&A
        </button>
        <button
          class="sc-jrAGrp iWxjsY"
          role="option"
          type="button"
        >
          Write-Ins
        </button>
        <button
          class="sc-jrAGrp iWxjsY"
          role="option"
          type="button"
        >
          Tally
        </button>
        <button
          class="sc-jrAGrp iWxjsY"
          role="option"
          type="button"
        >
          Advanced
        </button>
      </div>
      <div
        class="sc-fubCfw kBiVZq"
      >
        <button
          class="sc-ksdxAp ctUtNB"
          type="button"
        >
          Lock Machine
        </button>
        <button
          class="sc-ksdxAp ctUtNB"
          type="button"
        >
          Eject USB
        </button>
      </div>
    </div>
    <main
      class="sc-gsTCUz hqEESM"
    >
      <div
        class="sc-dlfnbm kzZCED"
      >
        <div
          class="sc-crrsfI vnUTr"
        >
          <h1>
            Test Decks
          </h1>
          <p>
            <strong>
              Election:
            </strong>
             
            Mock General Election Choctaw 2020
            <br />
            <strong>
              Precinct:
            </strong>
             
            District 5
          </p>
          <p>
            <button
              class="sc-jrAGrp cvGifY"
              type="button"
            >
              Print Test Deck
            </button>
          </p>
          <p>
            <button
              class="sc-jrAGrp iWxjsY"
              role="option"
              type="button"
            >
              Back to Test Deck list
            </button>
          </p>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          Mock General Election Choctaw 2020
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Wednesday, August 26, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Choctaw County
            ,
             
            State of Mississippi
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          68ed9708d0
        </strong>
      </div>
    </div>
  </div>
  <div
    class="print-only"
  >
    <div>
      <h1>
        Mocked HMPB
      </h1>
      Election: 
      Mock General Election Choctaw 2020
      <br />
      Ballot Style 
      5
      , precinct 
      6522
      .
    </div>
    <div>
      <h1>
        Mocked HMPB
      </h1>
      Election: 
      Mock General Election Choctaw 2020
      <br />
      Ballot Style 
      5
      , precinct 
      6522
      .
    </div>
    <div>
      <h1>
        Mocked HMPB
      </h1>
      Election: 
      Mock General Election Choctaw 2020
      <br />
      Ballot Style 
      5
      , precinct 
      6522
      .
    </div>
  </div>
  <div />
</div>
`;

exports[`L&A (logic and accuracy) flow 2`] = `
<div
  aria-hidden="true"
>
  <div
    class="sc-bdfBwQ eVNwUy"
  >
    <div
      class="sc-hKgILt ciSCwP"
    >
      <div
        class="sc-eCssSg evawvT"
      >
        <div
          class="sc-jSgupP ioUXLm"
        >
          Voting
          <span>
            Works
          </span>
        </div>
        <div
          class="sc-gKsewC"
        >
          VxAdmin
        </div>
      </div>
      <div
        class="sc-iBPRYJ fVzTCx"
      >
        <button
          class="sc-jrAGrp hAHAue"
          role="option"
          type="button"
        >
          Definition
        </button>
        <button
          class="sc-jrAGrp hAHAue"
          role="option"
          type="button"
        >
          Cards
        </button>
        <button
          class="sc-jrAGrp hAHAue"
          role="option"
          type="button"
        >
          Ballots
        </button>
        <button
          class="sc-jrAGrp hAHAue active-section"
          role="option"
          type="button"
        >
          L&A
        </button>
        <button
          class="sc-jrAGrp iWxjsY"
          role="option"
          type="button"
        >
          Write-Ins
        </button>
        <button
          class="sc-jrAGrp iWxjsY"
          role="option"
          type="button"
        >
          Tally
        </button>
        <button
          class="sc-jrAGrp iWxjsY"
          role="option"
          type="button"
        >
          Advanced
        </button>
      </div>
      <div
        class="sc-fubCfw kBiVZq"
      >
        <button
          class="sc-ksdxAp ctUtNB"
          type="button"
        >
          Lock Machine
        </button>
        <button
          class="sc-ksdxAp ctUtNB"
          type="button"
        >
          Eject USB
        </button>
      </div>
    </div>
    <main
      class="sc-gsTCUz hqEESM"
    >
      <div
        class="sc-dlfnbm kzZCED"
      >
        <div>
          <strong>
            Test Deck Tally Reports
          </strong>
           for 
          Mock General Election Choctaw 2020
        </div>
        <div
          class="sc-crrsfI vnUTr"
        >
          <h1
            class="sc-jJoQpE dXTmzO"
            style="margin-bottom: 0.75em; margin-top: 0.25em;"
          >
            
             Tally Report for
             
            <strong>
              All Precincts
            </strong>
          </h1>
          <p>
            Wednesday, August 26, 2020
            , 
            Choctaw County
            , 
            State of Mississippi
            <br />
            <span
              class="sc-dkPtyc dVpXhv"
            >
              This report was created on 
              Tuesday, November 3, 2020, 10:22:00 PM UTC
            </span>
          </p>
          <p>
            <button
              class="sc-jrAGrp cvGifY"
              type="button"
            >
              Print Results Report
            </button>
          </p>
          <p>
            <button
              class="sc-jrAGrp hAHAue"
              type="button"
            >
              Save Results Report as PDF
            </button>
          </p>
          <p>
            <button
              class="sc-jrAGrp iWxjsY"
              role="option"
              type="button"
            >
              Back to Test Deck list
            </button>
          </p>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          Mock General Election Choctaw 2020
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Wednesday, August 26, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Choctaw County
            ,
             
            State of Mississippi
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          68ed9708d0
        </strong>
      </div>
    </div>
  </div>
  <div
    class="print-only"
  >
    <section
      class="sc-ikJzcn gFcHpk"
    >
      <img
        alt="VotingWorks logo"
        class="sc-iwjezw cKifuT"
        src="/votingworks-wordmark-black.svg"
      />
      <div>
        <strong>
          Test Deck Tally Reports
        </strong>
         for 
         Mock General Election Choctaw 2020
      </div>
      <div
        class="sc-crrsfI kVGBFI"
      >
        <h1
          class="sc-jJoQpE dXTmzO"
          style="margin-bottom: 0.75em; margin-top: 0.25em;"
        >
          
           Tally Report for
           
          <strong>
            All Precincts
          </strong>
        </h1>
        <p>
          Wednesday, August 26, 2020
          , 
          Choctaw County
          , 
          State of Mississippi
          <br />
          <span
            class="sc-dkPtyc dVpXhv"
          >
            This report was created on 
            Tuesday, November 3, 2020, 10:22:00 PM UTC
          </span>
        </p>
      </div>
      <div
        class="sc-hiCivh hqTCjy"
      >
        <div
          class="sc-hGPAah dymfDz"
        >
          <div
            class="sc-jRQAMF foBEwC"
            data-testid="results-table-775020876"
          >
            <p
              class="sc-dkPtyc dVpXhv"
            >
              United States
            </p>
            <h3>
              President
            </h3>
            <p
              class="sc-dkPtyc dVpXhv"
            >
              <span
                class="sc-hKwCoD kKHUyA"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-ieebsP kAYriC"
            >
              <tbody>
                <tr
                  data-testid="775020876-775031988"
                >
                  <td>
                    Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    13
                  </td>
                </tr>
                <tr
                  data-testid="775020876-775031987"
                >
                  <td>
                    Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    13
                  </td>
                </tr>
                <tr
                  data-testid="775020876-775031989"
                >
                  <td>
                    Presidential Electors for Phil Collins for President and Bill Parker for Vice President
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    13
                  </td>
                </tr>
                <tr
                  data-testid="775020876-__write-in"
                >
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-hGPAah dymfDz"
        >
          <div
            class="sc-jRQAMF foBEwC"
            data-testid="results-table-775020877"
          >
            <p
              class="sc-dkPtyc dVpXhv"
            >
              United States
            </p>
            <h3>
              Senate 
            </h3>
            <p
              class="sc-dkPtyc dVpXhv"
            >
              <span
                class="sc-hKwCoD kKHUyA"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-ieebsP kAYriC"
            >
              <tbody>
                <tr
                  data-testid="775020877-775031985"
                >
                  <td>
                    Mike Espy
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    13
                  </td>
                </tr>
                <tr
                  data-testid="775020877-775031986"
                >
                  <td>
                    Cindy Hyde-Smith
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    13
                  </td>
                </tr>
                <tr
                  data-testid="775020877-775031990"
                >
                  <td>
                    Jimmy Edwards
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    13
                  </td>
                </tr>
                <tr
                  data-testid="775020877-__write-in"
                >
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-hGPAah dymfDz"
        >
          <div
            class="sc-jRQAMF foBEwC"
            data-testid="results-table-775020872"
          >
            <p
              class="sc-dkPtyc dVpXhv"
            >
              US House Of Representatives
            </p>
            <h3>
              1st Congressional District
            </h3>
            <p
              class="sc-dkPtyc dVpXhv"
            >
              <span
                class="sc-hKwCoD kKHUyA"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-ieebsP kAYriC"
            >
              <tbody>
                <tr
                  data-testid="775020872-775031978"
                >
                  <td>
                    Antonia Eliason
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    26
                  </td>
                </tr>
                <tr
                  data-testid="775020872-775031979"
                >
                  <td>
                    Trent Kelly
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    13
                  </td>
                </tr>
                <tr
                  data-testid="775020872-__write-in"
                >
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-hGPAah dymfDz"
        >
          <div
            class="sc-jRQAMF foBEwC"
            data-testid="results-table-775020870"
          >
            <p
              class="sc-dkPtyc dVpXhv"
            >
              Northern District
            </p>
            <h3>
              Supreme Court District 3(Northern) Position 3
            </h3>
            <p
              class="sc-dkPtyc dVpXhv"
            >
              <span
                class="sc-hKwCoD kKHUyA"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-ieebsP kAYriC"
            >
              <tbody>
                <tr
                  data-testid="775020870-775031976"
                >
                  <td>
                    Josiah Dennis Coleman
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    26
                  </td>
                </tr>
                <tr
                  data-testid="775020870-775031993"
                >
                  <td>
                    Percy L. Lynchard
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    13
                  </td>
                </tr>
                <tr
                  data-testid="775020870-__write-in"
                >
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-hGPAah dymfDz"
        >
          <div
            class="sc-jRQAMF foBEwC"
            data-testid="results-table-775020899"
          >
            <p
              class="sc-dkPtyc dVpXhv"
            >
              Election Commissioner 01
            </p>
            <h3>
              Election Commissioner  01
            </h3>
            <p
              class="sc-dkPtyc dVpXhv"
            >
              <span
                class="sc-hKwCoD kKHUyA"
              >
                9 ballots
                 cast /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-ieebsP kAYriC"
            >
              <tbody>
                <tr
                  data-testid="775020899-775032015"
                >
                  <td>
                    Glynda Chaney Fulce
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    9
                  </td>
                </tr>
                <tr
                  data-testid="775020899-__write-in"
                >
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-hGPAah dymfDz"
        >
          <div
            class="sc-jRQAMF foBEwC"
            data-testid="results-table-775020900"
          >
            <p
              class="sc-dkPtyc dVpXhv"
            >
              Election Commissioner 02
            </p>
            <h3>
              Election Commissioner 02
            </h3>
            <p
              class="sc-dkPtyc dVpXhv"
            >
              <span
                class="sc-hKwCoD kKHUyA"
              >
                9 ballots
                 cast /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-ieebsP kAYriC"
            >
              <tbody>
                <tr
                  data-testid="775020900-775032016"
                >
                  <td>
                    Charles Beck
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    6
                  </td>
                </tr>
                <tr
                  data-testid="775020900-775032017"
                >
                  <td>
                    Sharon Brooks
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    3
                  </td>
                </tr>
                <tr
                  data-testid="775020900-__write-in"
                >
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-hGPAah dymfDz"
        >
          <div
            class="sc-jRQAMF foBEwC"
            data-testid="results-table-775020901"
          >
            <p
              class="sc-dkPtyc dVpXhv"
            >
              Election Commissioner 03
            </p>
            <h3>
              Election Commissioner 03
            </h3>
            <p
              class="sc-dkPtyc dVpXhv"
            >
              <span
                class="sc-hKwCoD kKHUyA"
              >
                9 ballots
                 cast /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-ieebsP kAYriC"
            >
              <tbody>
                <tr
                  data-testid="775020901-775032018"
                >
                  <td>
                    Dorothy Anderson
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    9
                  </td>
                </tr>
                <tr
                  data-testid="775020901-__write-in"
                >
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-hGPAah dymfDz"
        >
          <div
            class="sc-jRQAMF foBEwC"
            data-testid="results-table-775020902"
          >
            <p
              class="sc-dkPtyc dVpXhv"
            >
              Election Commissioner 04
            </p>
            <h3>
              Election Commissioner 04
            </h3>
            <p
              class="sc-dkPtyc dVpXhv"
            >
              <span
                class="sc-hKwCoD kKHUyA"
              >
                9 ballots
                 cast /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-ieebsP kAYriC"
            >
              <tbody>
                <tr
                  data-testid="775020902-775032019"
                >
                  <td>
                    Willie Mae Guillory
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    6
                  </td>
                </tr>
                <tr
                  data-testid="775020902-775032020"
                >
                  <td>
                    Lewis Wright
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    3
                  </td>
                </tr>
                <tr
                  data-testid="775020902-__write-in"
                >
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-hGPAah dymfDz"
        >
          <div
            class="sc-jRQAMF foBEwC"
            data-testid="results-table-775020903"
          >
            <p
              class="sc-dkPtyc dVpXhv"
            >
              Election Commissioner 05
            </p>
            <h3>
              Election Commissioner 05
            </h3>
            <p
              class="sc-dkPtyc dVpXhv"
            >
              <span
                class="sc-hKwCoD kKHUyA"
              >
                3 ballots
                 cast /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-ieebsP kAYriC"
            >
              <tbody>
                <tr
                  data-testid="775020903-775032021"
                >
                  <td>
                    Ouida A Loper
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    2
                  </td>
                </tr>
                <tr
                  data-testid="775020903-775032022"
                >
                  <td>
                    Wayne McLeod
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    1
                  </td>
                </tr>
                <tr
                  data-testid="775020903-__write-in"
                >
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-hGPAah dymfDz"
        >
          <div
            class="sc-jRQAMF foBEwC"
            data-testid="results-table-775020904"
          >
            <p
              class="sc-dkPtyc dVpXhv"
            >
              School Board District 5
            </p>
            <h3>
              School Board 05
            </h3>
            <p
              class="sc-dkPtyc dVpXhv"
            >
              <span
                class="sc-hKwCoD kKHUyA"
              >
                3 ballots
                 cast /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-ieebsP kAYriC"
            >
              <tbody>
                <tr
                  data-testid="775020904-775032023"
                >
                  <td>
                    Michael D Thomas
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    3
                  </td>
                </tr>
                <tr
                  data-testid="775020904-__write-in"
                >
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-hGPAah dymfDz"
        >
          <div
            class="sc-jRQAMF foBEwC"
            data-testid="results-table-750000017"
          >
            <p
              class="sc-dkPtyc dVpXhv"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 2
House Concurrent Resolution No. 47
            </h3>
            <p
              class="sc-dkPtyc dVpXhv"
            >
              <span
                class="sc-hKwCoD kKHUyA"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-ieebsP kAYriC"
            >
              <tbody>
                <tr
                  data-testid="750000017-yes"
                >
                  <td>
                    Yes
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    26
                  </td>
                </tr>
                <tr
                  data-testid="750000017-no"
                >
                  <td>
                    No
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    13
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-hGPAah dymfDz"
        >
          <div
            class="sc-jRQAMF foBEwC"
            data-testid="results-table-750000018"
          >
            <p
              class="sc-dkPtyc dVpXhv"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 3
House Bill 1796 - Flag Referendum
            </h3>
            <p
              class="sc-dkPtyc dVpXhv"
            >
              <span
                class="sc-hKwCoD kKHUyA"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-ieebsP kAYriC"
            >
              <tbody>
                <tr
                  data-testid="750000018-yes"
                >
                  <td>
                    Yes
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    26
                  </td>
                </tr>
                <tr
                  data-testid="750000018-no"
                >
                  <td>
                    No
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    13
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-hGPAah dymfDz"
        >
          <div
            class="sc-jRQAMF foBEwC"
            data-testid="results-table-750000015"
          >
            <p
              class="sc-dkPtyc dVpXhv"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 1 – Either/Neither
            </h3>
            <p
              class="sc-dkPtyc dVpXhv"
            >
              <span
                class="sc-hKwCoD kKHUyA"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-ieebsP kAYriC"
            >
              <tbody>
                <tr
                  data-testid="750000015-yes"
                >
                  <td>
                    Yes
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    26
                  </td>
                </tr>
                <tr
                  data-testid="750000015-no"
                >
                  <td>
                    No
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    13
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-hGPAah dymfDz"
        >
          <div
            class="sc-jRQAMF foBEwC"
            data-testid="results-table-750000016"
          >
            <p
              class="sc-dkPtyc dVpXhv"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 1 – Pick One
            </h3>
            <p
              class="sc-dkPtyc dVpXhv"
            >
              <span
                class="sc-hKwCoD kKHUyA"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-hKwCoD kKHUyA"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-ieebsP kAYriC"
            >
              <tbody>
                <tr
                  data-testid="750000016-yes"
                >
                  <td>
                    Yes
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    26
                  </td>
                </tr>
                <tr
                  data-testid="750000016-no"
                >
                  <td>
                    No
                  </td>
                  <td
                    class="sc-dJjZJu fKfTwY"
                  >
                    13
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div />
</div>
`;

exports[`tabulating CVRs 1`] = `
<section
  class="sc-ikJzcn gFcHpk"
  data-testid="election-full-tally-report"
>
  <img
    alt="VotingWorks logo"
    class="sc-iwjezw cKifuT"
    src="/votingworks-wordmark-black.svg"
  />
  <div
    class="sc-crrsfI kVGBFI"
  >
    <h1>
      Official
       
      Mock General Election Choctaw 2020
       Tally Report
    </h1>
    <p>
      Wednesday, August 26, 2020
      , 
      Choctaw County
      , 
      State of Mississippi
      <br />
      <span
        class="sc-dkPtyc dVpXhv"
      >
        This report was created on 
        Tuesday, November 3, 2020, 10:22:00 PM UTC
      </span>
    </p>
  </div>
  <div
    class="sc-hiCivh hqTCjy"
  >
    <div
      class="sc-efQUeY fyTYfm"
    >
      <h3>
        Ballots by Voting Method
      </h3>
      <table
        class="sc-ieebsP kIjWQX"
        data-testid="voting-method-table"
      >
        <tbody>
          <tr
            data-testid="absentee"
          >
            <td
              class="sc-dJjZJu bbhgyU"
            >
              Absentee
            </td>
            <td
              class="sc-dJjZJu BqrMg"
            >
              50
            </td>
          </tr>
          <tr
            data-testid="standard"
          >
            <td
              class="sc-dJjZJu bbhgyU"
            >
              Precinct
            </td>
            <td
              class="sc-dJjZJu BqrMg"
            >
              50
            </td>
          </tr>
          <tr
            data-testid="total"
          >
            <td
              class="sc-dJjZJu bbhgyU"
            >
              <strong>
                Total Ballots Cast
              </strong>
            </td>
            <td
              class="sc-dJjZJu BqrMg"
            >
              <strong>
                100
              </strong>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020876"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          United States
        </p>
        <h3>
          President
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            100 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            1 overvote
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            7 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020876-775031988"
            >
              <td>
                Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                27
              </td>
            </tr>
            <tr
              data-testid="775020876-775031987"
            >
              <td>
                Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                36
              </td>
            </tr>
            <tr
              data-testid="775020876-775031989"
            >
              <td>
                Presidential Electors for Phil Collins for President and Bill Parker for Vice President
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                29
              </td>
            </tr>
            <tr
              data-testid="775020876-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020877"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          United States
        </p>
        <h3>
          Senate 
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            100 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            4 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            4 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020877-775031985"
            >
              <td>
                Mike Espy
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                29
              </td>
            </tr>
            <tr
              data-testid="775020877-775031986"
            >
              <td>
                Cindy Hyde-Smith
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                35
              </td>
            </tr>
            <tr
              data-testid="775020877-775031990"
            >
              <td>
                Jimmy Edwards
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                28
              </td>
            </tr>
            <tr
              data-testid="775020877-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020872"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          US House Of Representatives
        </p>
        <h3>
          1st Congressional District
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            100 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            3 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            5 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020872-775031978"
            >
              <td>
                Antonia Eliason
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                46
              </td>
            </tr>
            <tr
              data-testid="775020872-775031979"
            >
              <td>
                Trent Kelly
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                46
              </td>
            </tr>
            <tr
              data-testid="775020872-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020870"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          Northern District
        </p>
        <h3>
          Supreme Court District 3(Northern) Position 3
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            100 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            5 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020870-775031976"
            >
              <td>
                Josiah Dennis Coleman
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                37
              </td>
            </tr>
            <tr
              data-testid="775020870-775031993"
            >
              <td>
                Percy L. Lynchard
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                58
              </td>
            </tr>
            <tr
              data-testid="775020870-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020899"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          Election Commissioner 01
        </p>
        <h3>
          Election Commissioner  01
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            18 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            1 undervote
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020899-775032015"
            >
              <td>
                Glynda Chaney Fulce
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                17
              </td>
            </tr>
            <tr
              data-testid="775020899-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020900"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          Election Commissioner 02
        </p>
        <h3>
          Election Commissioner 02
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            15 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            1 undervote
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020900-775032016"
            >
              <td>
                Charles Beck
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                5
              </td>
            </tr>
            <tr
              data-testid="775020900-775032017"
            >
              <td>
                Sharon Brooks
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                9
              </td>
            </tr>
            <tr
              data-testid="775020900-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020901"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          Election Commissioner 03
        </p>
        <h3>
          Election Commissioner 03
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            23 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            1 undervote
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020901-775032018"
            >
              <td>
                Dorothy Anderson
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                22
              </td>
            </tr>
            <tr
              data-testid="775020901-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020902"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          Election Commissioner 04
        </p>
        <h3>
          Election Commissioner 04
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            25 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            1 overvote
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            0 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020902-775032019"
            >
              <td>
                Willie Mae Guillory
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                10
              </td>
            </tr>
            <tr
              data-testid="775020902-775032020"
            >
              <td>
                Lewis Wright
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                14
              </td>
            </tr>
            <tr
              data-testid="775020902-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020903"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          Election Commissioner 05
        </p>
        <h3>
          Election Commissioner 05
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            19 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            2 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            2 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020903-775032021"
            >
              <td>
                Ouida A Loper
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                9
              </td>
            </tr>
            <tr
              data-testid="775020903-775032022"
            >
              <td>
                Wayne McLeod
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                6
              </td>
            </tr>
            <tr
              data-testid="775020903-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020904"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          School Board District 5
        </p>
        <h3>
          School Board 05
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            19 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            0 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020904-775032023"
            >
              <td>
                Michael D Thomas
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                19
              </td>
            </tr>
            <tr
              data-testid="775020904-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-750000017"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 2
House Concurrent Resolution No. 47
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            100 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            2 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            5 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="750000017-yes"
            >
              <td>
                Yes
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                40
              </td>
            </tr>
            <tr
              data-testid="750000017-no"
            >
              <td>
                No
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                53
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-750000018"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 3
House Bill 1796 - Flag Referendum
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            100 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            3 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            2 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="750000018-yes"
            >
              <td>
                Yes
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                43
              </td>
            </tr>
            <tr
              data-testid="750000018-no"
            >
              <td>
                No
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                52
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-750000015"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 1 – Either/Neither
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            98 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            3 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            3 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="750000015-yes"
            >
              <td>
                Yes
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                39
              </td>
            </tr>
            <tr
              data-testid="750000015-no"
            >
              <td>
                No
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                53
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-750000016"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 1 – Pick One
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            98 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            4 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            5 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="750000016-yes"
            >
              <td>
                Yes
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                40
              </td>
            </tr>
            <tr
              data-testid="750000016-no"
            >
              <td>
                No
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                49
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</section>
`;

exports[`tabulating CVRs with SEMS file 1`] = `
<section
  class="sc-ikJzcn gFcHpk"
  data-testid="election-full-tally-report"
>
  <img
    alt="VotingWorks logo"
    class="sc-iwjezw cKifuT"
    src="/votingworks-wordmark-black.svg"
  />
  <div
    class="sc-crrsfI kVGBFI"
  >
    <h1>
      Unofficial
       
      Mock General Election Choctaw 2020
       Tally Report
    </h1>
    <p>
      Wednesday, August 26, 2020
      , 
      Choctaw County
      , 
      State of Mississippi
      <br />
      <span
        class="sc-dkPtyc dVpXhv"
      >
        This report was created on 
        Tuesday, November 3, 2020, 10:22:00 PM UTC
      </span>
    </p>
  </div>
  <div
    class="sc-hiCivh hqTCjy"
  >
    <div
      class="sc-efQUeY fyTYfm"
    >
      <h3>
        Ballots by Voting Method
      </h3>
      <table
        class="sc-ieebsP kIjWQX"
        data-testid="voting-method-table"
      >
        <tbody>
          <tr
            data-testid="absentee"
          >
            <td
              class="sc-dJjZJu bbhgyU"
            >
              Absentee
            </td>
            <td
              class="sc-dJjZJu BqrMg"
            >
              50
            </td>
          </tr>
          <tr
            data-testid="standard"
          >
            <td
              class="sc-dJjZJu bbhgyU"
            >
              Precinct
            </td>
            <td
              class="sc-dJjZJu BqrMg"
            >
              150
            </td>
          </tr>
          <tr
            data-testid="total"
          >
            <td
              class="sc-dJjZJu bbhgyU"
            >
              <strong>
                Total Ballots Cast
              </strong>
            </td>
            <td
              class="sc-dJjZJu BqrMg"
            >
              <strong>
                200
              </strong>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020876"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          United States
        </p>
        <h3>
          President
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            200 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            2 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            14 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020876-775031988"
            >
              <td>
                Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                54
              </td>
            </tr>
            <tr
              data-testid="775020876-775031987"
            >
              <td>
                Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                72
              </td>
            </tr>
            <tr
              data-testid="775020876-775031989"
            >
              <td>
                Presidential Electors for Phil Collins for President and Bill Parker for Vice President
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                58
              </td>
            </tr>
            <tr
              data-testid="775020876-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020877"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          United States
        </p>
        <h3>
          Senate 
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            200 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            8 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            8 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020877-775031985"
            >
              <td>
                Mike Espy
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                58
              </td>
            </tr>
            <tr
              data-testid="775020877-775031986"
            >
              <td>
                Cindy Hyde-Smith
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                70
              </td>
            </tr>
            <tr
              data-testid="775020877-775031990"
            >
              <td>
                Jimmy Edwards
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                56
              </td>
            </tr>
            <tr
              data-testid="775020877-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020872"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          US House Of Representatives
        </p>
        <h3>
          1st Congressional District
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            200 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            6 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            10 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020872-775031978"
            >
              <td>
                Antonia Eliason
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                92
              </td>
            </tr>
            <tr
              data-testid="775020872-775031979"
            >
              <td>
                Trent Kelly
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                92
              </td>
            </tr>
            <tr
              data-testid="775020872-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020870"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          Northern District
        </p>
        <h3>
          Supreme Court District 3(Northern) Position 3
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            200 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            10 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020870-775031976"
            >
              <td>
                Josiah Dennis Coleman
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                74
              </td>
            </tr>
            <tr
              data-testid="775020870-775031993"
            >
              <td>
                Percy L. Lynchard
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                116
              </td>
            </tr>
            <tr
              data-testid="775020870-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020899"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          Election Commissioner 01
        </p>
        <h3>
          Election Commissioner  01
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            36 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            2 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020899-775032015"
            >
              <td>
                Glynda Chaney Fulce
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                34
              </td>
            </tr>
            <tr
              data-testid="775020899-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020900"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          Election Commissioner 02
        </p>
        <h3>
          Election Commissioner 02
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            30 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            2 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020900-775032016"
            >
              <td>
                Charles Beck
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                10
              </td>
            </tr>
            <tr
              data-testid="775020900-775032017"
            >
              <td>
                Sharon Brooks
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                18
              </td>
            </tr>
            <tr
              data-testid="775020900-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020901"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          Election Commissioner 03
        </p>
        <h3>
          Election Commissioner 03
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            46 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            2 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020901-775032018"
            >
              <td>
                Dorothy Anderson
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                44
              </td>
            </tr>
            <tr
              data-testid="775020901-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020902"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          Election Commissioner 04
        </p>
        <h3>
          Election Commissioner 04
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            50 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            2 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            0 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020902-775032019"
            >
              <td>
                Willie Mae Guillory
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                20
              </td>
            </tr>
            <tr
              data-testid="775020902-775032020"
            >
              <td>
                Lewis Wright
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                28
              </td>
            </tr>
            <tr
              data-testid="775020902-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020903"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          Election Commissioner 05
        </p>
        <h3>
          Election Commissioner 05
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            38 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            4 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            4 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020903-775032021"
            >
              <td>
                Ouida A Loper
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                18
              </td>
            </tr>
            <tr
              data-testid="775020903-775032022"
            >
              <td>
                Wayne McLeod
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                12
              </td>
            </tr>
            <tr
              data-testid="775020903-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-775020904"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          School Board District 5
        </p>
        <h3>
          School Board 05
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            38 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            0 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="775020904-775032023"
            >
              <td>
                Michael D Thomas
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                38
              </td>
            </tr>
            <tr
              data-testid="775020904-__write-in"
            >
              <td>
                Write-In
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-750000017"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 2
House Concurrent Resolution No. 47
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            200 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            4 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            10 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="750000017-yes"
            >
              <td>
                Yes
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                80
              </td>
            </tr>
            <tr
              data-testid="750000017-no"
            >
              <td>
                No
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                106
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-750000018"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 3
House Bill 1796 - Flag Referendum
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            200 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            6 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            4 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="750000018-yes"
            >
              <td>
                Yes
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                86
              </td>
            </tr>
            <tr
              data-testid="750000018-no"
            >
              <td>
                No
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                104
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-750000015"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 1 – Either/Neither
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            196 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            6 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            6 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="750000015-yes"
            >
              <td>
                Yes
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                78
              </td>
            </tr>
            <tr
              data-testid="750000015-no"
            >
              <td>
                No
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                106
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-hGPAah dymfDz"
    >
      <div
        class="sc-jRQAMF foBEwC"
        data-testid="results-table-750000016"
      >
        <p
          class="sc-dkPtyc dVpXhv"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 1 – Pick One
        </h3>
        <p
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            196 ballots
             cast /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            8 overvotes
             /
          </span>
           
          <span
            class="sc-hKwCoD kKHUyA"
          >
            10 undervotes
          </span>
        </p>
        <table
          class="sc-ieebsP kAYriC"
        >
          <tbody>
            <tr
              data-testid="750000016-yes"
            >
              <td>
                Yes
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                80
              </td>
            </tr>
            <tr
              data-testid="750000016-no"
            >
              <td>
                No
              </td>
              <td
                class="sc-dJjZJu fKfTwY"
              >
                98
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</section>
`;
